# signal-core

./: .env.example  CLAUDE.md  README.md  pyproject.toml
config/: sources.yaml
docs/superpowers/plans/: 2026-05-02-signal-core.md
docs/superpowers/specs/: 2026-05-02-signal-core-design.md
signal_core/: __main__.py  config.py  models.py  pipeline.py  scheduler.py
signal_core/deliver/: base.py  email.py  feishu.py  formatter.py  telegram.py
signal_core/fetcher/: base.py  github_trending.py  hackernews.py  rss.py
signal_core/filter/: dedup.py
signal_core/storage/: db.py
signal_core/summarizer/: __init__.py  base.py  deepseek.py  kimi.py
tests/: conftest.py  test_config.py  test_deliver_email.py  test_deliver_feishu.py  test_deliver_telegram.py  test_fetcher_github.py  test_fetcher_hn.py  test_fetcher_rss.py  test_filter.py  test_formatter.py  test_models.py  test_pipeline.py  test_storage.py  test_summarizer.py
