[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "signal-core"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "openai>=1.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "mypy>=1.10",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["signal_core*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
